# video-wall-client

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  Toolchain-rpi.cmake  conanfile.txt  config.cfg  config.yaml  make-rpi.sh
cmake/: Packing.cmake
include/: Configuration.h  Window.h  argh.h
libs/Renderer/: CMakeLists.txt  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
libs/glad/: CMakeLists.txt  glad.c  glad.h
libs/yaml/: CMakeLists.txt
res/shaders/: Basic.shader
rpi-build/: CMakeCache.txt  Makefile  cmake_install.cmake
rpi-build/libs/Renderer/: Makefile  cmake_install.cmake
rpi-build/libs/glad/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Command.cpp  Command.hpp  Configuration.cpp  Configuration.h  Configuration.hpp  Display.cpp  Display.h  IndexBuffer.cpp  IndexBuffer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Messaging.cpp  Messaging.hpp  Renderer.cpp  Renderer.h  Util.cpp  Util.hpp  VertexBuffer.cpp  VertexBuffer.h  Video.cpp  Video.hpp  argh.h  display.cpp  display.hpp  main.cpp  main.hpp
src/MessageHandler/: MessageHandler.cpp  MessageHandler.hpp
src/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
src/VideoPlayer/: VideoPlayer.h
